--- a/public/scss/_home.scss
+++ b/public/scss/_home.scss
@@ -282,6 +282,12 @@
             background: #20B3D1 !important;
         }
     }
+.owl-prev {
+    background-color: transparent !important;
+}
+.owl-next {
+    background-color: transparent !important;
+}
 @media screen and (min-width: 760px) { 
     .nav-right, .nav-left {
         color: #20B3D1;
