--- a/public/scss/_projectDetailPage.scss
+++ b/public/scss/_projectDetailPage.scss
@@ -37,7 +37,8 @@
         font-size: 12px !important;
     }
     & > p > img {
-        width: 100%;
+        max-width: 100%;
+        height: auto;
     }
 }
 .project-details__project-content {
@@ -77,7 +78,6 @@
             font-size: 14px !important;
         }
         & > p > img {
-            width: 70%;
             margin: 0 auto;
         }
     }
@@ -98,9 +98,6 @@
         & > table {
             width: 70% !important; 
             font-size: 19px !important;
-        }
-        & > p > img {
-            width: 50%;
         }
     }
 }
